Sicherheitshinweis nur einmal aufgeführt

--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -1,4 +1,5 @@
 \section{Elektronik}\label{sec:elektronik}
+\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 \subsection{Ansteuerung}
 In diesem Kapitel werden verschiedene Arten und Möglichkeiten der Ansteuerung des LCD diskutiert.\\
 
