--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -1,4 +1,5 @@
 \section{LCD}
+\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 \subsection{Funktionsweise}
 
 \begin{figure}[t]
@@ -69,7 +70,7 @@ Wegen der oben genannten Gründe greifen wir für die Herstellung unseres Displa
 
 
 \subsection{Ätzen der Struktur}
-\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
+%\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts anzeigen soll die leitende Schicht weggeätzt werden. Dies ist daran zu erkennen, dass die brauen Färbung der leitenden Indium-Zinn Schicht vollständig verschwindet. Hierbei stehen zwei Verfahren zur Auswahl.\\
 
@@ -106,7 +107,7 @@ Qualitativ waren keine Unterschiede zu erkennen aber der Vorteil der Salzsäure 
 
 \subsection{Oxidierung der Glasplatten}
 
-\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
+%\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Um die Oxidierung der Indium-Zinn Schicht der Glasplatten zu Indium-Zinn-Oxid zu erreichen wurden mehrere Verfahren getestet. Im Folgenden werden diese forgestellt und auf ihre Einsetzbarkeit überprüft.
 Indikatoren für eine gelungene Oxidierung sind:
@@ -117,7 +118,7 @@ Indikatoren für eine gelungene Oxidierung sind:
 
 \subsubsection{Wasserstoffperoxid}
 
-\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
+%\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Eine Testplatte wurden in ein Wasserstoffperoxid-Bad gegeben und nach 1h wieder entnommen. Beide oben genannten Indikatoren haben nicht angesprochen, was darauf schließen lässt, dass der Oxidierungsversuch nicht erfolgreich war.
 Nun soll ein Langzeittest über mehrere Tage Erkentnisse geben, ob der Oxidierungsvorgang bei einer längeren Einwirkungsdauer funktioniert. Dies war nicht der Fall.
@@ -150,7 +151,7 @@ Die Platten können ohne Probleme anhand der schwachen braunen Restfäbrung ausg
 
 \subsection{Reinigung der Glasplatten}
 
-\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
+%\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Im nächsten Schritt müssen die Glasplatten gereinigt werden, da jede Verunreinigung dazu führen kann, dass ungewollte Flecken entstehen.
 Das alkalische Reinigungsbad wird im Verhältnis 1:5 mit Wasser gemischt und anschließend in ein Gefäß gegeben, in das die Glasplatten hineingelegt werden können (siehe Bild f). Wenn man die Platten jeweils mit der leitende Seite nach Außen zeigend einlegt, können beide gleichzeitig gereinigt werden. Um einen Siedeverzug zu verhindern ist es notwendig, dass Siedesteinchen eingelegt werden. Nachdem die Glasplatten in das Gefäß gelegt wurden kann die Flüßigkeit mit einem Heizfeld zum kochen gebracht. Die Glasplatten für 5 min im kochenden Wasser belassen und dann erst wieder etwas abkühlen lassen. Die Glasplatten vorsichtig entnehmen, da große Temperaturunterschiede diese zum Springen bringen können.
