Alles in einen Satz geschrieben

--- a/paper/Kapitel/dankesworte.tex
+++ b/paper/Kapitel/dankesworte.tex
@@ -1,7 +1,9 @@
 \section{Danksagung}
 
-Ein großes umfangreiches Projekt wie dieses ist natürlich nicht alleine realisierbar. Wir hatten viele freundliche Mithelfer, die uns jederzeit mit Tat und Rat zur Seite standen.\\
+Ein großes und umfangreiches Projekt wie dieses ist nicht ohne Hilfe realisierbar. Deshalb bedanken wir uns bei unserem 5. Teammitglied Markus Walther und dem FAUFabLab Team für ihre großartige Unterstützung.
 
-An erster Stelle danken wir unserem 5. Teammitglied Markus Walther. Er hat uns vor allem mit seinem chemischen Wissen unterstützt und hat viele Stunden in unserem Projekt mitgearbeitet. Außerdem stand er immer bereit, um Fragen zu klären.\\
+%Ein großes und umfangreiches Projekt wie dieses ist natürlich nicht alleine realisierbar. Wir hatten viele freundliche Mithelfer, die uns jederzeit mit Tat und Rat zur Seite standen.\\
 
-Zu guter Letzt danken wir dem ganzen FAUFabLab Team für die Unterstützung bei der Durchführung unserer Arbeiten. Zudem standen sie uns jederzeit mit konstruktiven Antworten auf unsere Fragen zur Verfügung.
+%An erster Stelle danken wir unserem 5. Teammitglied Markus Walther. Er hat uns vor allem mit seinem chemischen Wissen unterstützt und hat viele Stunden in unserem Projekt mitgearbeitet. Außerdem stand er immer bereit, um Fragen zu klären.\\
+
+%Zu guter Letzt danken wir dem ganzen FAUFabLab Team für die Unterstützung bei der Durchführung unserer Arbeiten. Zudem standen sie uns jederzeit mit konstruktiven Antworten auf unsere Fragen zur Verfügung.
