--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -1,5 +1,5 @@
 \section{Elektronik}\label{sec:elektronik}
-\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
+\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
 \subsection{Ansteuerung}
 In diesem Kapitel werden verschiedene Arten und Möglichkeiten der Ansteuerung des LCD diskutiert.\\
 
@@ -97,9 +97,9 @@ Das Platinenlayout wurde mit der kostenlosen Version von Eagle erstellt. Anschli
   \label{shematic}
 \end{figure}
 
-\begin{figure}[t]
-  \centering
-  \includegraphics[angle=90, width=0.5\linewidth, keepaspectratio]{Bilder/DIYBoard}
-  \caption{Platinenlayout (erstellt mit Eagle)}
-  \label{board}
-\end{figure}
+%\begin{figure}[t]
+%  \centering
+%  \includegraphics[angle=90, width=0.5\linewidth, keepaspectratio]{Bilder/DIYBoard}
+%  \caption{Platinenlayout (erstellt mit Eagle)}
+%  \label{board}
+%\end{figure}
