Zeilenverkleinerung wieder entfernt

--- a/paper/Allgemeines/latexConfig.tex
+++ b/paper/Allgemeines/latexConfig.tex
@@ -21,4 +21,4 @@
 % ----------------------------------------------------------------------
 
 %\linespread{0.9}
-\addtolength{\parskip}{-1mm}
+%\addtolength{\parskip}{-1mm}
