Gehäuse und Programm in diesem Punkt integriert

--- a/paper/Kapitel/ausblick.tex
+++ b/paper/Kapitel/ausblick.tex
@@ -1,6 +1,13 @@
+\section{Weitere Schritte}
+
+Zur Projektfertigstellung muss zum einen noch das Programm für den Mikrocontroller geschrieben werden. Eine Herausforderung wird hierbei die Ansteuerung per Multiplexverfahren. Dies ist nicht so einfach mögliche wie beim Betrieb von LEDs, da es zwischen den Spannungsrichtungen, die am LCD anliegen, keinen Unterschied gibt. Die nicht verwendeten Ausgänge müssen hierbei als Eingänge ohne Pullup oder Pulldown Widerstand geschaltete werden (floating/not connected).
+
+Des Weiteren wird ein Gehäuse mit Hilfe des Lasercutters aus Acryl gefertigt.
+
+
 \section{Ausblick und Erweiterungen}
 
-Dieses Kapitel soll einen Ausblick geben, wie die Uhr verbessert und erweitert werden kann. Außerdem sind Ideen aufgeführt, in welchen Bereichen selbstgebaute LCDs noch hilfreich sein können.
+%Dieses Kapitel soll einen Ausblick geben, wie die Uhr verbessert und erweitert werden kann. Außerdem sind Ideen aufgeführt, in welchen Bereichen selbstgebaute LCDs noch hilfreich sein können.
 
 \subsection{Verbesserungsmöglichkeiten}
 
@@ -8,7 +15,7 @@ Um rechtzeitig die Batterien wechseln zu können, wäre eine Anzeige denkbar, di
 
 Des Weiteren ist denkbar, die Uhr um ein Funkuhrmodul zu erweitern, sodass die Uhrzeit nicht manuell eingestellt werden muss. Zusätzlich ist eine Weckfunktion denkbar.
 
-Motiviert durch ein Standardwecker mit LCD, kann ein DC-DC Spannungswandler eingesetzt werden, um die Uhr mit lediglich einer Batterie betreiben zu können. Somit besteht die Möglichkeit, die Größe der Uhr zu verkleinern.
+%Motiviert durch ein Standardwecker mit LCD, kann ein DC-DC Spannungswandler eingesetzt werden, um die Uhr mit lediglich einer Batterie betreiben zu können. Somit besteht die Möglichkeit, die Größe der Uhr zu verkleinern.
 
 \subsection{Weitere Anwendungen}
 
@@ -16,4 +23,4 @@ Eine Möglichkeit wäre es, eine Anzeige für eine selbstgebaute Wetterstation z
 
 Eine weitere Idee ist es, ein Spiel zu entwerfen und ein angepasstes Display dazu zu erstellen.
 
-Für ein Eieruhr, um rechtzeitig die Glasplatten, die im Ofen oxidiert werden herauszuholen, kann ein LCD Display verwendet werden.
+%Für ein Eieruhr, um rechtzeitig die Glasplatten, die im Ofen oxidiert werden herauszuholen, kann ein LCD Display verwendet werden.
