Gehäuse und Programm werden entnommen

--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -5,7 +5,7 @@
 \begin{figure}[t]
   \centering
   \includegraphics[height=0.3\textwidth, keepaspectratio]{Bilder/LCD_layers}
-  \caption{Aufbau eines LCDs mit Polarisationsfolien (Markierung 1 und 5), zwei beschichteten, leitenden Glasplatten (Markierung 2 und 4), den Flüssigkristallen (Markierung 3) und einem Reflektor (Markierung 6) nach ref[FIXME REF]}
+  \caption{Aufbau eines LCDs mit Polarisationsfolien (Markierung 1 und 5), zwei beschichteten, leitenden Glasplatten (Markierung 2 und 4), den Flüssigkristallen (Markierung 3) und einem Reflektor (Markierung 6)}
   \label{lcdaufbau}
 \end{figure}
 
@@ -33,7 +33,7 @@ Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf j
 
 \subsection{Elektrodenstrukturaufbringung}
 
-In diesem Kapitel wird beschrieben, wie die gewünschten Strukturen auf die leitend beschichteten Glasplatten aufgebracht werden können. Hierfür kommen 3 Methoden in Betracht. Mittels eines fotosensitiven Lacks, Folien aus dem Folienplotter des FAUFabLab oder per Edding.\\
+%In diesem Kapitel wird beschrieben, wie die gewünschten Strukturen auf die leitend beschichteten Glasplatten aufgebracht werden können. Hierfür kommen 3 Methoden in Betracht. Mittels eines fotosensitiven Lacks, Folien aus dem Folienplotter des FAUFabLab oder per Edding.\\
 
 \subsubsection*{Fotolack}
 
@@ -45,6 +45,7 @@ Mit letzerer Methode wurde das beste Ergebnis erzielt, da der Lack leicht nachlf
 Nun werden die beschichteten Glasplatten in den Belichter gelegt und das Anzeigedesign, welches auf Papier ausgedruckt wurde, auf die beschitete Seite gelegt. Wie beim Belichten von Platinen ist eine Belichtungszeit von 9:40 min zu wählen. Da es sich um Glasplatten handelt, auf denen von beiden Seiten Licht durchdringen kann, ist umbedingt darauf zu Achten ein lichtundurchlässiges Objekt auf die nicht mit Fotolack beschichtete Seite zu legen (Beispielsweise eine schwarze Acrylplatte). Ansonsten wird die komplette Fotolackschicht belichtet. Anschließend wird der Fotolack entwickelt (NaOH, siehe Abschnitt \ref{subsec:platine}).\\
 
 Abbildung \ref{Fotolackverfahren} zeigt, dass durch das Fotolackverfahren ein unscharfes Bild ensteht, da sich der Fotolack nicht gleichmäßig genug auf der Glasplatte verteilt.\\
+%Es lässt sich festhalten, dass das Endergebnis bei der Beschichtung mit Fotolack nicht zufriedenstellend ist. Es hat sich als Schwierig erwiesen den Lack gleichmäßig aufzubringen, sodass beim Entwickeln und Ätzen alle Stellen gleichmäßig mit dem Chemikalien behandelt werden. Das Endergebnis ergab ein sehr unscharfes Bild, weshalb sich diese Methode als ungeeignet erwies.
 
 \begin{figure}[t]
   \centering
@@ -69,25 +70,25 @@ Abbildung \ref{Fotolackverfahren} zeigt, dass durch das Fotolackverfahren ein un
 
 \subsubsection*{Klebefolie}\label{subsec:klebefolie}
 Muster werden entworfen und mit einem Plotter aus einer selbstklebenden Klebefolie ausgeschnitten. Das Muster wird auf einer Übertragungsfolie aufgebracht und auf die leitende Schicht der Glasplatten aufgeklebt, anschließend wird die Übertragungsfolie abgezogen. Nun sind alle Stellen, die später leuchten sollen, abgedeckt. Versuche haben bestätigt, dass die Klebefolie die leitende Indium-Zinn Schicht nicht entfernt oder merklich schädigt. Die Vorteile der Folie sind, dass komplexe Strukturen hergestellt werden können und sehr scharfe Kanten entstehen. Allerdings ist das anschließende Abziehen der Folie sehr mühsam.
-Es lässt sich festhalten, dass das Endergebnis bei der Beschichtung mit Fotolack nicht zufriedenstellend ist. Es hat sich als Schwierig erwiesen den Lack gleichmäßig aufzubringen, sodass beim Entwickeln und Ätzen alle Stellen gleichmäßig mit dem Chemikalien behandelt werden. Das Endergebnis ergab ein sehr unscharfes Bild, weshalb sich diese Methode als ungeeignet erwies.\\
+
 
 \subsubsection*{Edding}
-Weitere Möglichkeiten zur Elektrodenstrukturierung sind mit Hilfe eines wasserfesten Edding Strukturen direkt aufzumalen. Diese Verfahren sind zwar einfacher, allerdings entstehen hierbei keine so scharfen Kanten wie durch eine Folie entstehen und keine sauberen Strukturen abgebildet werden können.\\
+Weitere Möglichkeiten zur Elektrodenstrukturierung sind mit Hilfe eines wasserfesten Edding Strukturen direkt aufzumalen. Diese Verfahren sind zwar einfacher, allerdings entstehen hierbei keine so scharfen Kanten wie durch eine Folie entstehen und keine sauberen Strukturen abgebildet werden können.
 
 Wegen der oben genannten Gründe greifen wir für die Herstellung unseres Displays auf die Methote Folienplott zurück.
 
 
 \subsection{Ätzen der Struktur}
-%\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
+%\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
 
 Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts anzeigen soll die leitende Schicht weggeätzt werden. Dies ist daran zu erkennen, dass die brauen Färbung der leitenden Indium-Zinn Schicht vollständig verschwindet. Hierbei stehen zwei Verfahren zur Auswahl.\\
 
 \subsubsection*{Salzsäure}
 
-Zum Einen lässt sich die Indium-Zinn-Schicht sehr schnell und einfach mit Salsäure (5\%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht, (Fotolack, Klebefolie oder Edding) in Salzsäure gelegt. Bereits nach 30 sek ist der Vorgang beendet. Gegenenfalls können die Platten auch länger im Salsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.\\
+Zum Einen lässt sich die Indium-Zinn-Schicht sehr schnell und einfach mit Salsäure (5\%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht, (Fotolack, Klebefolie oder Edding) in Salzsäure gelegt. Bereits nach 30 sek ist der Vorgang beendet. Gegenenfalls können die Platten auch länger im Salsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.
 
 \subsubsection*{Platinenätzmittel}
-Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulfatlösung) möglich, welches im FAUFabLab zum Ätzen von Platinen verwendet wird. Dazu wird eine Natriumpersulfatlösung verwendet und nach ca. 20 Minuten war bei unserem Versuch die leitende Indium-Zinn-Schicht entfernt. Diese Methode stellt also eine gute Alternatie zur Salzsäure dar.\\
+Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulfatlösung) möglich, welches im FAUFabLab zum Ätzen von Platinen verwendet wird. Dazu wird eine Natriumpersulfatlösung verwendet und nach ca. 20 Minuten war bei unserem Versuch die leitende Indium-Zinn-Schicht entfernt. Diese Methode stellt also eine gute Alternatie zur Salzsäure dar.
 
 \begin{figure}[t]
   \centering
@@ -118,11 +119,14 @@ Qualitativ waren keine Unterschiede zu erkennen aber der Vorteil der Salzsäure 
 %\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Um die Oxidierung der Indium-Zinn Schicht der Glasplatten zu Indium-Zinn-Oxid zu erreichen wurden mehrere Verfahren getestet. Im Folgenden werden diese forgestellt und auf ihre Einsetzbarkeit überprüft.
-Indikatoren für eine gelungene Oxidierung sind:
-\begin{itemize}
-\item Die für die leitende Schicht typische brauen Färbung muss merklich verschwinden
-\item Eine Messung mittels eines Multimeters muss eine Nennenswerte Änderung der Leitfähigkeit ergeben\\
-\end{itemize}
+Die Indikatoren für eine gelungene Oxidierung sind, dass die für die leitende Schicht typische brauen Färbung merklich verschwindet und eine Messung mittels eines Multimeters eine Nennenswerte Änderung der Leitfähigkeit ergibt.
+
+%Die Indikatoren für eine gelungene Oxidierung sind:
+%
+%\begin{itemize}
+%\item Die für die leitende Schicht typische brauen Färbung muss merklich verschwinden
+%\item Eine Messung mittels eines Multimeters muss eine Nennenswerte Änderung der Leitfähigkeit ergeben\\
+%\end{itemize}
 
 \subsubsection{Wasserstoffperoxid}
 
@@ -131,20 +135,20 @@ Indikatoren für eine gelungene Oxidierung sind:
 Eine Testplatte wurden in ein Wasserstoffperoxid-Bad gegeben und nach 1h wieder entnommen. Beide oben genannten Indikatoren haben nicht angesprochen, was darauf schließen lässt, dass der Oxidierungsversuch nicht erfolgreich war.
 Nun soll ein Langzeittest über mehrere Tage Erkentnisse geben, ob der Oxidierungsvorgang bei einer längeren Einwirkungsdauer funktioniert. Dies war nicht der Fall.
 
-Somit lässt sich festhalten, dass eine Oxidierung mittels Wasserstoffperoxid bei Raumtemperatur nicht möglich ist.\\
+Somit lässt sich festhalten, dass eine Oxidierung mittels Wasserstoffperoxid bei Raumtemperatur nicht möglich ist.
 
 \subsubsection{Wasserstoffperoxid mit Hitze}
 
 Da die Oxidierung bei Raumtemperatur nicht funktioniert hat wurde ein Versuch gestartet, die Indium-Zinn Schicht in erwärmten Wasserstoffperoxid durchzuführen.
-Keiner der oben genannten Indikatoren wies auf eine Oxidierung hin, weshalb das Verfahren ebenfalls als nicht erfolgreich gewertet wird.\\
+Keiner der oben genannten Indikatoren wies auf eine Oxidierung hin, weshalb das Verfahren ebenfalls als nicht erfolgreich gewertet wird.
 
 \subsubsection{Hitze durch einen Heißluftfön}
 
-Ein Test mit einem Heißluftfön, der auf 300 Grad eingestellt wurde ergab, das nach einer Einwirkzeit von 1h die Schicht oxidiert ist. Jedoch ist keine großflächige Aufbringung der Hitze möglich. Deshalb ist für Plattengröße von 110mmx100mm das Verfahren unbrauchbar.\\
+Ein Test mit einem Heißluftfön, der auf 300 Grad eingestellt wurde ergab, das nach einer Einwirkzeit von 1h die Schicht oxidiert ist. Jedoch ist keine großflächige Aufbringung der Hitze möglich. Deshalb ist für Plattengröße von 110mmx100mm das Verfahren unbrauchbar.
 
 \subsubsection{Hitze im Ofen}
 
-Ein funktionierendes, aber sehr zeitaufwändiges, Verfahren ist die Oxidierung in einem Ofen. Hierbei kann ein gewöhnlicher Pizzaofen eingesetzt werden. Wir haben den Reflow-Ofen aus dem Fablab hierfür benutzt.
+Ein funktionierendes, aber sehr zeitaufwändiges, Verfahren ist die Oxidierung in einem Ofen. Hierbei kann ein gewöhnlicher Elektroofen eingesetzt werden. Wir haben den Reflow-Ofen aus dem Fablab hierfür benutzt.
 Bei der maximalen Temperatur des Ofen von 230 Grad werden die Glasplatten mit der beschichteten Seite nach oben auf das Gitter gelegt. Wichtig ist, dass der Ofen maximal leicht vorgeheizt wurde, da zu starke Temperaturunterschiede die Glasplatten zum brechen bringen könnten. Nun wurden die Testplatten für 1:30h im Ofen belassen und anschließend für 30 min abgekühlt.
 Beide Indikatoren haben angeschlagen was zeigt, dass die Oxidierung erfolgreich war.\\
 
@@ -172,7 +176,7 @@ Jetzt müssen die leitenden Schichten noch einer Reiborientierung unterzogen wer
 \subsection{Verkleben und Befüllen}
 
 Nun die zugeschnittene Abstandhalterfolie auf eine Glasplatte legen. Als Abstandhalterfolie kann die Folie einer gewöhnlichen Verpackung einer Zigarettenschatel verwendet werden. 
-Anschließend die zweite Glasplatte auflegen und zur Ersten ausrichten, dass die Anzeigesymbole so exakt wie möglich übereinander liegen. Nun die zwei Glasplatten an den Abstandhalterfolien zusamendrücken und zwei gegenüberliegende Seiten mit 2-Komponentenkleber verkleben (siehe Bild H). Sobald dieser hart geworden ist kann mit der Befüllung des Flüssigkristalls begonnen werden.
+Anschließend die zweite Glasplatte auflegen und zur Ersten ausrichten, dass die Anzeigesymbole so exakt wie möglich übereinander liegen. Nun die zwei Glasplatten an den Abstandhalterfolien zusamendrücken und zwei gegenüberliegende Seiten mit 2-Komponentenkleber verkleben (siehe Bild h). Sobald dieser hart geworden ist kann mit der Befüllung des Flüssigkristalls begonnen werden.
 Nur sehr wenig Flüssigkristall mit einer Pipette entnehmen und an eine offene Seite auftragen. Durch den Kapillareffekt zieht dieser von selbst ein (siehe Bild i). Wenn das Display komplett vom Flüssigkristall durchzogen ist können die beiden noch offenen Seiten ebenfalls mit 2-Komponentenkleber verklebt werden.\\
 
 Wichtig ist, dass nicht an beiden Seiten der Flüssigkristall aufgetragen wird, sondern nur an Einer.
