Gehäuse und Programm entfernt

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -7,8 +7,8 @@
 \input{Kapitel/projektbeschreibung}
 \input{Kapitel/lcd}
 \input{Kapitel/elektronik}
-\input{Kapitel/programmierung}
-\input{Kapitel/gehaeuse}
+%\input{Kapitel/programmierung}
+%\input{Kapitel/gehaeuse}
 \input{Kapitel/ausblick}
 \input{Kapitel/zusammenfassung}
 \input{Kapitel/dankesworte}
