--- a/paper/Kapitel/bibliography.tex
+++ b/paper/Kapitel/bibliography.tex
@@ -23,7 +23,7 @@ CC-BY-SA
 
 \bibitem{aufbau_und_funktion}
 D.~Holke
-(am 7.~Februar aberufen)
+(am 7.~Februar abgerufen)
 \emph{Aufbau und Funktion einer LCD Zelle}
 \label{aufbau_und_funktion}
 \hskip 1em plus 0.5em minus 0.4em\relax
@@ -31,7 +31,7 @@ D.~Holke
 
 \bibitem{Bauanleitung}
 F.~Oestreicher
-(am 7.~Februar aberufen)
+(am 7.~Februar abgerufen)
 \emph{Selbstbau einer funktionsfähigen Flüssigkristallanzeige}
 \label{Bauanleitung}
 \hskip 1em plus 0.5em minus 0.4em\relax
@@ -39,7 +39,7 @@ F.~Oestreicher
 
 \bibitem{conductivepaint}
 bareconductives
-(am 7.~Februar aberufen)
+(am 7.~Februar abgerufen)
 \emph{conductive paint}
 \label{conductivepaint}
 \hskip 1em plus 0.5em minus 0.4em\relax
@@ -47,7 +47,7 @@ bareconductives
 
 \bibitem{Fotolack}
 Conrad electronics
-(am 7.~Februar aberufen)
+(am 7.~Februar abgerufen)
 \emph{Fotosensitiver Lack positiv 20}
 \label{Fotolack}
 \hskip 1em plus 0.5em minus 0.4em\relax
@@ -55,7 +55,7 @@ Conrad electronics
 
 \bibitem{fablabwerkzeuge}
 FAUFabLab
-(am 7.~Februar aberufen)
+(am 7.~Februar abgerufen)
 \emph{Werkzeuge des FAUFabLab}
 \label{fablabwerkzeuge}
 \hskip 1em plus 0.5em minus 0.4em\relax
@@ -63,7 +63,7 @@ FAUFabLab
 
 \bibitem{atmel88pa}
 ATMEL
-(am 7.~Februar aberufen)
+(am 7.~Februar abgerufen)
 \emph{Microcontroller ATMEL ATmega88PA}
 \label{atmel88pa}
 \hskip 1em plus 0.5em minus 0.4em\relax
