--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -5,7 +5,8 @@
 \begin{figure}[t]
   \centering
   \includegraphics[height=0.3\textwidth, keepaspectratio]{Bilder/LCD_layers}
-  \caption{Aufbau eines LCDs mit Polarisationsfolien (Markierung 1 und 5), zwei beschichteten, leitenden Glasplatten (Markierung 2 und 4), den Flüssigkristallen (Markierung 3) und einem Reflektor (Markierung 6)}
+  \caption{Aufbau eines LCDs mit Polarisationsfolien (Markierung 1 und 5), zwei beschichteten, leitenden Glasplatten (Markierung 2 und 4), den Flüssigkristallen (Markierung 3) und einem Reflektor (Markierung 6)
+  \cite{lcdlayers}}
   \label{lcdaufbau}
 \end{figure}
 
