--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -17,7 +17,7 @@ Das Display besteht aus zwei zusammengeklebten Glasplatten mit einem Abstand von
 \item Außerhalb der Glasplatten: Polarisationsfolienn (Markierung 1 und 5)
 \item Eine Refelektorfolie auf einer Seite (Markierung 6)
 \end{itemize}
-Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen. Auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht. Der Flüssigkristall beschreibt eine “Schraubenstruktur”. Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird die Polarisationsebene um 90 Grad gedreht und das Licht wird durchgelassen und reflektiert. Beim Anlegen von Spannung (ca. 3V Wechselspannung -> siehe Kapitel \ref{sec:elektronik}) richten sich die Moleküle kollektiv senkrecht zu den Elektroden aus. Somit existiert also für das Polarisationslicht keine Schraubenstruktur mehr. Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: \cite[Bauanleitung]{Bauanleitung} \cite[LCD Aufbau und Funktion]{aufbau_und_funktion})
+Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen. Auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht. Der Flüssigkristall beschreibt eine “Schraubenstruktur”. Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird die Polarisationsebene um 90 Grad gedreht und das Licht wird durchgelassen und reflektiert. Beim Anlegen von Spannung (ca. 3V Wechselspannung -> siehe Kapitel \ref{sec:elektronik}) richten sich die Moleküle kollektiv senkrecht zu den Elektroden aus. Somit existiert also für das Polarisationslicht keine Schraubenstruktur mehr. Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: \cite{Bauanleitung} \cite{aufbau_und_funktion})
 
 
 %\subsection{Produktionsschritte}
@@ -40,12 +40,12 @@ Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf j
 
 Wie bei der Herstellung von Platinen wird auf die leitende Seite der Glasplatten eine Schicht Fotolack aufgetragen. Verwendet wurde \cite[\textit{POSITIV 20 Lichtemfpindlicher Lack}]{Fotolack}.
 Bei Raumtemperatur muss der Lack für 24h an einem dunklen Ort trocknen. Die Glasplatten sollten zudem vor dem Besprühen gut gereinigt werden, um Fettflecken und andere Verunreinigungen zu entfernen. Ansonsten besteht die Gefahr, dass der Lack nicht gut haftet oder sich schlecht verteilt.
-Auf mehreren Platten wurde der Fotolack in verschiednene Arten aufgetragen. Zum einen wurde ein Test für 1 bis zu 5 aufgetragenen Schichten durchlaufen. Des Weiteren wurden die Platten flach auf dem Boden liegend, sowie in einem 30 Grad Winkel besprüht.
-Mit letzerer Methode wurde das beste Ergebnis erzielt, da der Lack leicht nachlfließen konnte und sich somit am schönsten verteilt hat. Bei der Schichtdicke war es ausreichend eine einzelne Schicht aufzutragen.
+Auf mehreren Platten wurde der Fotolack auf verschiedene Arten aufgetragen. Zum einen wurde ein Test für 1 bis zu 5 aufgetragenen Schichten durchlaufen. Des Weiteren wurden die Platten flach auf dem Boden liegend, sowie in einem 30 Grad Winkel besprüht.
+Mit letzterer Methode wurde das beste Ergebnis erzielt, da der Lack leicht nachfließen konnte und sich somit am schönsten verteilt hat. Bei der Schichtdicke war es ausreichend eine einzelne Schicht aufzutragen.
 
-Nun werden die beschichteten Glasplatten in den Belichter gelegt und das Anzeigedesign, welches auf Papier ausgedruckt wurde, auf die beschitete Seite gelegt. Wie beim Belichten von Platinen ist eine Belichtungszeit von 9:40 min zu wählen. Da es sich um Glasplatten handelt, auf denen von beiden Seiten Licht durchdringen kann, ist umbedingt darauf zu Achten ein lichtundurchlässiges Objekt auf die nicht mit Fotolack beschichtete Seite zu legen (Beispielsweise eine schwarze Acrylplatte). Ansonsten wird die komplette Fotolackschicht belichtet. Anschließend wird der Fotolack entwickelt (NaOH, siehe Abschnitt \ref{subsec:platine}).\\
+Nun werden die beschichteten Glasplatten in den Belichter gelegt und das Anzeigedesign, welches auf Papier ausgedruckt wurde, auf die beschichtete Seite gelegt. Wie beim Belichten von Platinen ist eine Belichtungszeit von 9:40 min zu wählen. Da es sich um Glasplatten handelt, auf denen von beiden Seiten Licht durchdringen kann, ist unbedingt darauf zu achten ein lichtundurchlässiges Objekt auf die nicht mit Fotolack beschichtete Seite zu legen (Beispielsweise eine schwarze Acrylplatte). Ansonsten wird die komplette Fotolackschicht belichtet. Anschließend wird der Fotolack entwickelt. %(NaOH, siehe Abschnitt. \ref{subsec:platine}).\\
 
-Abbildung \ref{Fotolackverfahren} zeigt, dass durch das Fotolackverfahren ein unscharfes Bild ensteht, da sich der Fotolack nicht gleichmäßig genug auf der Glasplatte verteilt.\\
+Abbildung \ref{Fotolackverfahren} zeigt, dass durch das Fotolackverfahren ein unscharfes Bild entsteht, da sich der Fotolack nicht gleichmäßig genug auf der Glasplatte verteilt.\\
 %Es lässt sich festhalten, dass das Endergebnis bei der Beschichtung mit Fotolack nicht zufriedenstellend ist. Es hat sich als Schwierig erwiesen den Lack gleichmäßig aufzubringen, sodass beim Entwickeln und Ätzen alle Stellen gleichmäßig mit dem Chemikalien behandelt werden. Das Endergebnis ergab ein sehr unscharfes Bild, weshalb sich diese Methode als ungeeignet erwies.
 
 \begin{figure}[t]
@@ -70,13 +70,13 @@ Abbildung \ref{Fotolackverfahren} zeigt, dass durch das Fotolackverfahren ein un
 %\end{figure}
 
 \subsubsection*{Klebefolie}\label{subsec:klebefolie}
-Muster werden entworfen und mit einem Plotter aus einer selbstklebenden Klebefolie ausgeschnitten. Das Muster wird auf einer Übertragungsfolie aufgebracht und auf die leitende Schicht der Glasplatten aufgeklebt, anschließend wird die Übertragungsfolie abgezogen. Nun sind alle Stellen, die später leuchten sollen, abgedeckt. Versuche haben bestätigt, dass die Klebefolie die leitende Indium-Zinn Schicht nicht entfernt oder merklich schädigt. Die Vorteile der Folie sind, dass komplexe Strukturen hergestellt werden können und sehr scharfe Kanten entstehen. Allerdings ist das anschließende Abziehen der Folie sehr mühsam.
+Muster werden entworfen und mit einem Plotter aus einer selbstklebenden-Folie ausgeschnitten. Das Muster wird auf einer Übertragungsfolie aufgebracht und auf die leitende Schicht der Glasplatten aufgeklebt, anschließend wird die Übertragungsfolie abgezogen. Nun sind alle Stellen, die später leuchten sollen, abgedeckt. Versuche haben bestätigt, dass das Abziehen der Klebefolie die leitende Indium-Zinn Schicht nicht entfernt oder merklich schädigt. Die Vorteile der Folie sind, dass komplexe Strukturen hergestellt werden können und sehr scharfe Kanten entstehen. Allerdings ist das anschließende Abziehen der Folie sehr mühsam.
 
 
 \subsubsection*{Edding}
-Weitere Möglichkeiten zur Elektrodenstrukturierung sind mit Hilfe eines wasserfesten Edding Strukturen direkt aufzumalen. Diese Verfahren sind zwar einfacher, allerdings entstehen hierbei keine so scharfen Kanten wie durch eine Folie entstehen und keine sauberen Strukturen abgebildet werden können.
+Eine weitere Möglichkeit zur Elektrodenstrukturierung ist mit Hilfe eines wasserfesten Eddings - hierbei werden die Strukturen direkt aufgemalt. Dieses Verfahren ist zwar einfacher, allerdings entstehen hierbei keine so scharfen Kanten wie durch die oben erwähnte Klebefolie.
 
-Wegen der oben genannten Gründe greifen wir für die Herstellung unseres Displays auf die Methote Folienplott zurück.
+Wegen der oben genannten Gründe greifen wir für die Herstellung unseres Displays auf die Methode Klebefolie zurück.
 
 
 \subsection{Ätzen der Struktur}
@@ -86,7 +86,7 @@ Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts
 
 \subsubsection*{Salzsäure}
 
-Zum Einen lässt sich die Indium-Zinn-Schicht sehr schnell und einfach mit Salsäure (5\%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht, (Fotolack, Klebefolie oder Edding) in Salzsäure gelegt. Bereits nach 30 sek ist der Vorgang beendet. Gegenenfalls können die Platten auch länger im Salsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.
+Die leitende Indium-Zinn-Schicht lässt sich sehr schnell und einfach mit Salsäure (5\%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht, (Fotolack, Klebefolie oder Edding) in Salzsäure gelegt. Bereits nach 30 sek ist der Vorgang beendet. Gegenenfalls können die Platten auch länger im Salsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.
 
 \subsubsection*{Platinenätzmittel}
 Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulfatlösung) möglich, welches im FAUFabLab zum Ätzen von Platinen verwendet wird. Dazu wird eine Natriumpersulfatlösung verwendet und nach ca. 20 Minuten war bei unserem Versuch die leitende Indium-Zinn-Schicht entfernt. Diese Methode stellt also eine gute Alternatie zur Salzsäure dar.
